# c_progress_bar

./: CMakeLists.txt  README.md
examples/: example.c
include/: c_progress_bar.h
src/: c_progress_bar.c  math_utils.c  system_utils.c
src/internal/: math_utils.h  system_utils.h
tests/: CMakeLists.txt  test_basic.c
